--- a/day1/styles.css
+++ b/day1/styles.css
@@ -25,4 +25,14 @@ body,html {
     background-color: rgb(60, 172, 32);
     border-radius: 10px;
     transition: width 2s;
+    display: flex;
+    flex-direction: column-reverse;
+
+}
+
+.text{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 50px;
 }
