--- a/day1/styles.css
+++ b/day1/styles.css
@@ -1,38 +1,38 @@
-body,html {
-    margin: 0;
-    padding: 0;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
 
-.cont{
-    height: 100vh;
+.cont {
+  height: 100vh;
 }
 
-.cont-n1{
-    width:  90%;    
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px;
+.cont-n1 {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
 }
 
-.cont-n2{
-    width: 150px;
-    height: 100%;
-    margin: 15px;
-    /* margin-left: 15px;
+.cont-n2 {
+  width: 150px;
+  height: 100%;
+  margin: 15px;
+  /* margin-left: 15px;
     margin-right: 15px; */
-    background-color: rgb(60, 172, 32);
-    border-radius: 10px;
-    transition: width 2s;
-    display: flex;
-    flex-direction: column-reverse;
-
+  background-color: rgb(60, 172, 32);
+  border-radius: 10px;
+  transition: width 2s;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
-.text{
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-    margin-left: 50px;
+.text {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 50px;
 }
